--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.6.2",
+    "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
     "react-icons": "^4.12.0",
-    "framer-motion": "^10.16.16",
+    "react-router-dom": "^6.20.1",
     "recharts": "^2.10.3",
     "zustand": "^4.4.7"
   },
@@ -24,10 +24,13 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16",
     "vite": "^5.0.8"
   }
 }
